# ESP-Doorbell

./: .clangd  .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  hello_world_main.c  idf_component.yml  main.c
main/audio/: audio_i2s_capture.c  audio_i2s_capture.h  audio_i2s_common.c  audio_i2s_common.h  audio_i2s_player.c  audio_i2s_player.h
main/ble_prov/: ble_prov.c  ble_prov.h  ble_prov_gatt.c  ble_prov_gatt.h  ble_prov_nvs.c  ble_prov_nvs.h
main/camera/: camera.c  camera.h
main/capture/: audio_i2s_src.c  audio_i2s_src.h  video_src.c  video_src.h
main/gpio/: bell_button.c  bell_button.h
main/network/: mqtt.c  mqtt.h  wifi.c  wifi.h
main/sd_handler/: sd_handler.c  sd_handler.h
main/settings/: chime_settings.c  chime_settings.h
main/test/: av_capture_mp4_test.c  av_capture_mp4_test.h  http_streaming_test.c  i2s_aac_test.c  i2s_aac_test.h  i2s_capture_esp_test.c  i2s_capture_esp_test.h  sd_card_test.c
main/test/camera/: camera.c  camera.h
main/time/: time_sync.c  time_sync.h
main/timer/: capture_timer.c  capture_timer.h  heartbeat.c  heartbeat.h
main/video/: video_capture.c  video_capture.h
main/websocket/: ws_stream.c  ws_stream.h
